Add phone/radio-station/window-overlay features, revert TACZ weapon sound to FMOD, trim mods to NeoForge-only
- Phone system (call/message UI, NanoVG canvas, native window overlay + JCEF browser
  via new engine/window and engine/browserhost modules) and a radio station block/item
  tying into the existing radio voice system.
- TACZ weapon sound: tried routing through raw OpenAL so Sound Physics Remastered could
  compute real occlusion/reverb for gunshots, but reverted back to the original FMOD
  bank path (com.tacz.guns.client.sound.fmod) after the OpenAL rewrite's tuning proved
  more trouble than it was worth; kept the entity-render culling behind window overlays.
- Vendored Sound Physics Remastered and VoxelMap as composite-build submodules
  (NeoForge subproject only, matching the existing TACZ/First-Aid-New pattern), and
  dropped the Fabric/Forge loader subprojects from Iris/sodium/ModernUI-MC/VoxelMap/
  Sound Physics Remastered submodules since only NeoForge is actually shipped.
- Misc: Gradle wrapper pinned back to 8.11, IDE run config disabled, .gitignore covers
  the two new engine/* modules' build output.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0175NZQcLh2XbF1iWtsWgPX5